--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"express": "3.1.0",
 		"browserify": "1.17.3",
-		"gl-matrix": "2.0.0"
+		"gl-matrix": "2.0.0",
+		"cubic-bezier": "0.1.2"
 	}
 }
